--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^3.1.2",
